[gd_scene load_steps=16 format=3 uid="uid://doo7qltly32l0"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_ohh52"]
[ext_resource type="PackedScene" uid="uid://ykh0e3bmfwtv" path="res://Scenes/Player/slot.tscn" id="2_3601b"]
[ext_resource type="Texture2D" uid="uid://f4fls5rdae4h" path="res://Assets/Sprites/rogues.png" id="2_cxl0u"]
[ext_resource type="Texture2D" uid="uid://boaxr1smh4tf4" path="res://Assets/pixel.png" id="2_yyscu"]
[ext_resource type="Resource" uid="uid://bee2dnxh1t6xj" path="res://Resources/Weapon/Wand.tres" id="3_qoma0"]
[ext_resource type="Script" path="res://Scripts/Player/options.gd" id="5_pq1bg"]
[ext_resource type="PackedScene" uid="uid://bldipeingm14g" path="res://Resources/Passives/passive_slot.tscn" id="5_rde5r"]
[ext_resource type="Resource" uid="uid://dsn6lt0xhrjnc" path="res://Resources/Passives/Magnet.tres" id="6_shb62"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrujh"]
bg_color = Color(0.231373, 0.113725, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kr8dd"]
bg_color = Color(0.1056, 0.16256, 0.96, 1)
border_color = Color(0.231373, 0.113725, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wr2uw"]
bg_color = Color(0.231373, 0.113725, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_255xs"]
bg_color = Color(0.96, 0.1056, 0.1056, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.231373, 0.113725, 0.0980392, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88cqd"]
size = Vector2(56, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kts5u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqbe1"]
radius = 50.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ohh52")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="NinePatchRect" parent="UI"]
visible = false
self_modulate = Color(0.6, 0.2926, 0.252, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.5
offset_top = -107.0
offset_right = 208.5
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yyscu")

[node name="Label" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.5
offset_right = 33.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Level Up"

[node name="Weapons" type="HBoxContainer" parent="UI"]
offset_left = 8.0
offset_top = 30.0
offset_right = 136.0
offset_bottom = 70.0

[node name="Slot" parent="UI/Weapons" instance=ExtResource("2_3601b")]
layout_mode = 2
item = ExtResource("3_qoma0")

[node name="Slot2" parent="UI/Weapons" instance=ExtResource("2_3601b")]
layout_mode = 2

[node name="Slot3" parent="UI/Weapons" instance=ExtResource("2_3601b")]
layout_mode = 2

[node name="PassiveItems" type="HBoxContainer" parent="UI"]
offset_left = 8.0
offset_top = 75.0
offset_right = 136.0
offset_bottom = 115.0

[node name="PassiveSlot" parent="UI/PassiveItems" instance=ExtResource("5_rde5r")]
layout_mode = 2
item = ExtResource("6_shb62")

[node name="PassiveSlot2" parent="UI/PassiveItems" instance=ExtResource("5_rde5r")]
layout_mode = 2

[node name="PassiveSlot3" parent="UI/PassiveItems" instance=ExtResource("5_rde5r")]
layout_mode = 2

[node name="XP" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
offset_right = 642.0
offset_bottom = 23.0
theme_override_styles/background = SubResource("StyleBoxFlat_vrujh")
theme_override_styles/fill = SubResource("StyleBoxFlat_kr8dd")
max_value = 10.0
show_percentage = false

[node name="Level" type="Label" parent="UI/XP"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 591.0
offset_top = 1.0
offset_right = 640.0
offset_bottom = 24.0
text = "Lv 100"
horizontal_alignment = 1

[node name="Options" type="VBoxContainer" parent="UI" node_paths=PackedStringArray("weapons", "passive_items", "panel")]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_pq1bg")
weapons = NodePath("../Weapons")
passive_items = NodePath("../PassiveItems")
panel = NodePath("../Panel")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -23.0
offset_top = -41.0
offset_right = 24.0
offset_bottom = -35.0
theme_override_styles/background = SubResource("StyleBoxFlat_wr2uw")
theme_override_styles/fill = SubResource("StyleBoxFlat_255xs")
value = 100.0
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_cxl0u")
region_enabled = true
region_rect = Rect2(32, 128, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_88cqd")

[node name="SelfDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="SelfDamage"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_kts5u")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Magnet" type="CollisionShape2D" parent="Magnet"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_pqbe1")

[connection signal="body_entered" from="SelfDamage" to="." method="_on_self_damage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Magnet" to="." method="_on_magnet_area_entered"]
